# HuaweiTecharena24

./: .gitignore  README.md
poland_challenge_demo2024/: readme.md
poland_challenge_demo2024/ann/: builder.hpp  common.hpp  graph.hpp  memory.hpp  neighbor.hpp  searcher.hpp  types.hpp  utils.hpp
poland_challenge_demo2024/ann/algorithms/: clustering.hpp  linalg.hpp
poland_challenge_demo2024/ann/helpa/: CMakeLists.txt
poland_challenge_demo2024/ann/helpa/bench/: bench_single.cc
poland_challenge_demo2024/ann/hnsw/: HNSWInitializer.hpp  hnsw.hpp
poland_challenge_demo2024/ann/hnswlib/: hnswalg.h  hnswlib.h
poland_challenge_demo2024/ann/nsg/: nndescent.hpp  nsg.hpp
poland_challenge_demo2024/ann/quant/: bf16_quant.hpp  calibrator.hpp  computer.hpp  e5m2_quant.hpp  evaluator.hpp  fp16_quant.hpp  fp32_quant.hpp  product_quant.hpp  quant.hpp  quant_base.hpp  sq4_quant.hpp  sq4u_quant.hpp  sq4ua_quant.hpp  sq6_quant.hpp  sq8_quant.hpp  sq8p_quant.hpp  sq8u_quant.hpp  utils.hpp
poland_challenge_demo2024/ann/searcher/: graph_searcher.hpp  refiner.hpp  searcher_base.hpp  sparse_searcher.hpp
poland_challenge_demo2024/ann/simd/: avx2.hpp  avx2_utils.hpp  avx512.hpp  avx512_utils.hpp  common.hpp  distance.hpp  neon.hpp  prefetch.hpp  scalar.hpp
poland_challenge_demo2024/ann/storage/: tensor.hpp
poland_challenge_demo2024/libc/: CMakeLists.txt  ann.cpp  ann.h  ann3.cpp  main.cpp  test.cpp
